--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
-<body>
+<body class="font-sora">
   <app-root></app-root>
 </body>
 </html>
